lark-bank/deploy/k8s/estate/cluster/runners.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estate
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: estate
          ports:
            - { name: http, containerPort: 8080 }
            - { name: metrics, containerPort: 9464 }
            - { name: cluster, containerPort: 34431 }
